Change Log for OpenXava project
===============================

OpenXava 7.0.3 (2022-12-9)
--------------------------
- Hibernate Envers upgraded to 5.6.14.
- Embedded Tomcat used in development upgraded to 9.0.69.
- Driver versions in doc and new projects upgraded for Microsoft SQL Server, Informix and Firebird.
- New property distinct in DescriptionsCalculator to allow not duplicated results.
- Removed Tab.DESCRIPTIONS_LIST_SEPARATOR final variable. 
- Fix: @DescriptionsList in an @ElementCollection depending on a member of the main entity does not work.  
- Fix: Wrong date formatting when pressing ENTER in the field after fill the date. 
- Fix: @OnChange action not executed always on date with time editor when using calendar popup.
- Fix: @OnChange action is executed several times on date with time editor as changing using calendar.
- Fix: Time is formatted with incorrect separator with Java 8 for Serbian language.
- Fix: ValidValuesRadioButton editor for enums is not shown when the editor is read only.
- Fix: Tooltips do not work for @DescriptionsList references.
- Fix: Bad values for list filter in combos if @DescriptionsList uses several fields for description. 
- Fix: Sometimes property names used for list configuration names do not match the column label in list. 
- Fix: Missing configuration property in LeanXcale documentation.
- Fix: Typos in View chapter of Reference Guide.
- Fix: Some missing images in the Chinese version of course.   
- Fix: SchemaTool adds a double semicolon at the end of each sentence in console output.

OpenXava 7.0.2 (2022-11-11)
---------------------------
- HSQLDB embedded database upgraded to 2.7.1.
- Embedded Tomcat used in development upgraded to 9.0.68.
- Hibernate upgraded to 5.6.12.
- Hibernate Envers upgraded to 5.6.12.
- JAXB impl upgraded to 2.3.7.
- PdfBox upgraded to 2.0.27.
- Groovy upgraded to 4.0.6.
- Driver versions in doc and new projects upgraded for MySQL and Db2.